[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["MahmoudHashemSE <Mahmoud.Hashem.SE@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
