[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["MahmoudHashemSE <Mahmoud.Hashem.SE@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
mysqlclient = "^2.1.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
channels = "^4.0.0"
channels-redis = "^4.0.0"
pytz = "^2022.7.1"
markdown = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
